q09/9.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: app01
  ports:
    - port: 80
      targetPort: 80
